Fix: switching to Hashrouter from BrowserRouter for github pages

--- a/campus-connect-auth-sync-main/index.html
+++ b/campus-connect-auth-sync-main/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>campus-connect-auth-sync</title>
-  <meta name="description" content="Generated Project" />
+  <meta name="description" content="A university events platform." />
   <meta name="author" content="" />
 
   <meta property="og:title" content="campus-connect-auth-sync" />
-  <meta property="og:description" content="Generated Project" />
+  <meta property="og:description" content="A university events platform." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="" />
 
